Links fixed on MP
fixed image links on main page

--- a/Healthy_Eating/healthy_eating.html
+++ b/Healthy_Eating/healthy_eating.html
@@ -46,9 +46,9 @@
             </div>
 
             <div>
-        
-                    <h2>Deliciously Ella aims to make healthy eating feel less alienating</h2>
-               
+
+                <h2>Deliciously Ella aims to make healthy eating feel less alienating</h2>
+
             </div>
             <br>
             <div>
@@ -74,7 +74,8 @@
                     reality is, I think in most people’s eyes, what we need is a meal that’s pretty easy to make and you
                     can
                     make a really big batch of, and then just chuck in the freezer.”
-                    With her latest cookbook, <b>Deliciously Ella Quick & Easy</b>, Mills wants to help make wellness healthy
+                    With her latest cookbook, <b>Deliciously Ella Quick & Easy</b>, Mills wants to help make wellness
+                    healthy
                     eating feel less alienating. And the fact it’s built around speedy recipes is no coincidence – she
                     and
                     her husband and business partner, Matt, welcomed her first child, Skye, last year.
@@ -90,13 +91,15 @@
                     “She came onto the shoots with us and I had her in a sling and was feeding her on set – so I was
                     breastfeeding and food styling at the same time.”<br><br>
                     Mills loves the end result though, “because it really feels truly reflective of such an important
-                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" class="text-wrap"/>
-                    With a baby, another on the way, and a business to run, <b>Mills has a new appreciation for how simple
-                    wellness should</b> – and can – be. “It’s going on a walk or doing a five-minute meditation,” says the
+                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" class="text-wrap" />
+                    With a baby, another on the way, and a business to run, <b>Mills has a new appreciation for how
+                        simple
+                        wellness should</b> – and can – be. “It’s going on a walk or doing a five-minute meditation,”
+                    says the
                     29-year-old. “It’s not the big, expensive, complicated, time-consuming things, <b>it’s the simple,
-                    everyday
-                    practices that you can have in your life to help you feel happier, calmer, healthier, more
-                    energised.”</b><br><br>
+                        everyday
+                        practices that you can have in your life to help you feel happier, calmer, healthier, more
+                        energised.”</b><br><br>
                     She emphasises how cheap and easy things like chickpea stews and lentil daals can be, and her
                     efforts to
                     make recipes that are more accessible are admirable.<br><br>
@@ -112,7 +115,8 @@
                 <p>
                     Food is obviously a big part of Mills’ ethos, but she’s started seeing it as just one part of a
                     bigger
-                    picture. <img src="../Healthy_Eating/ella-book.jpg" class="text-wrap"/>Each chapter in the new book explores a different issue, whether it’s mental health or the
+                    picture. <img src="../Healthy_Eating/ella-book.jpg" class="text-wrap" />Each chapter in the new book
+                    explores a different issue, whether it’s mental health or the
                     environment – wider interests which have been piqued by her podcast series interviewing various
                     experts.<br><br>
                     “The way that we eat is so linked to so many other things,” Mills explains. “We too often look at
@@ -126,15 +130,18 @@
                     that, it’s what I did as well. But at the same time, there’s so much more to it. Broccoli is great,
                     but
                     broccoli isn’t the answer to everything.”<br><br>
-                    Instead, Mills says she’s interested in wellness (for lack of a better word) as a whole – <b>how your
-                    mental health can affect your gut, the impact sleep has on your wellbeing, even analysing your
-                    relationship to people and the world around you as a whole.</b> “I think it’s increasingly important to
+                    Instead, Mills says she’s interested in wellness (for lack of a better word) as a whole – <b>how
+                        your
+                        mental health can affect your gut, the impact sleep has on your wellbeing, even analysing your
+                        relationship to people and the world around you as a whole.</b> “I think it’s increasingly
+                    important to
                     look
                     at all of it in context, and not get too overly focused on one thing or another,” she says.<br><br>
                 </p>
                 <hr>
                 <p>So, if you do want to have a healthier lifestyle, it’s worth looking at all aspects of it – not just
-                    diet. Mills’ top piece of advice for <b>making positive changes and sticking to them</b> is finding what
+                    diet. Mills’ top piece of advice for <b>making positive changes and sticking to them</b> is finding
+                    what
                     works for you. “Only you know what works for you,” she adds. “So much comes back to what you
                     actually enjoy, because nothing lasts if you don’t enjoy it. Nothing is sustainable for the long
                     term in your life if there’s no pleasure in it, and I think that’s the fundamental difference
@@ -147,14 +154,16 @@
                     So what else can you expect from her latest book? Deliciously Ella fans will see all her signatures
                     – comforting vegan food taking inspiration from a variety of cuisines, but with more of an emphasis
                     on batch-cooking and quick recipes.<br><br>
-                    Ultimately, Mills is looking to the future: <b>“Our mental and physical health isn’t something we want
-                    for the next week. It’s something that we want for decades.”</b>
+                    Ultimately, Mills is looking to the future: <b>“Our mental and physical health isn’t something we
+                        want
+                        for the next week. It’s something that we want for decades.”</b>
                 </p>
                 <hr>
                 <i>Her book can be bought here: <a
-                    href="https://www.waterstones.com/book/deliciously-ella-quick-and-easy/ella-mills-woodward/9781473639249">Quick and Easy - Deliciously Ella</a></i>
-                <hr><br>    
-                </div>
+                        href="https://www.waterstones.com/book/deliciously-ella-quick-and-easy/ella-mills-woodward/9781473639249">Quick
+                        and Easy - Deliciously Ella</a></i>
+                <hr><br>
+            </div>
         </div>
 
 
