--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
 <div class="flex-container">
   <div class="item">
-    <a href="./Healthy_Eating/healthy_eating.html"> <img src="./Healthy_Eating/chocolate_mousse.jpg" alt="choc mousse" class="rounded"/>
+    <a href="./Healthy_Eating/GF_desserts.html"> <img src="./Healthy_Eating/chocolate_mousse.jpg" alt="choc mousse" class="rounded"/>
     <div class="overlay">Guilt-Free Avocado Chocolate Mousse</div></a>  
   </div>
   <div class="item">
@@ -65,7 +65,7 @@
     <img src="./Main_Page/laos.jpg" alt="laos" class="rounded"/>
   </div>
   <div class="item">
-    <a href="./Healthy_Eating/Autumnal_soups.html"> <img src="./Healthy_Eating/stuffed squash.jpg" alt="squash" class="rounded"/>
+    <a href="./Healthy_Eating/stuffed squash.jpg"> <img src="./Healthy_Eating/stuffed squash.jpg" alt="squash" class="rounded"/>
     <div class="overlay">Festive Butternut Squash</div></a>
   </div>
 </div>
