--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="./Main_Page/laos.jpg" alt="laos" class="rounded"/>
   </div>
   <div class="item">
-    <a href="./Healthy_Eating/stuffed squash.jpg"> <img src="./Healthy_Eating/stuffed squash.jpg" alt="squash" class="rounded"/>
+    <a href="./Healthy_Eating/xmas_recipes.html"> <img src="./Healthy_Eating/stuffed squash.jpg" alt="squash" class="rounded"/>
     <div class="overlay">Festive Butternut Squash</div></a>
   </div>
 </div>
