--- a/Healthy_Eating/healthy_eating.html
+++ b/Healthy_Eating/healthy_eating.html
@@ -51,11 +51,7 @@
 
             </div>
             <br>
-            <div>
-                <i>
-                    <h5>Article from Wise Living magazine</h5>
-                </i>
-            </div>
+            
             <div>
                 <h6>Monday 16th November 2020</h6>
                 <hr>
@@ -69,7 +65,7 @@
                     word <b>‘wellness’</b> sometimes makes people think of weird and wacky things in LA, with shamans
                     and
                     cleanses. When you hear it, you don’t necessarily think of going for a walk and then making a bean
-                    chilli, which feels more within your remit.<br><br>
+                    chilli, which feels more within your remit.<br><br><img src="https://www.harpersbazaararabia.com/public/images/2015/10/08/20140603_ella%2020432_PR_5145701.jpg" class="text-wrap"/>
                     “The wonderful and wacky make more interesting stories, which I so appreciate,” she adds, “but the
                     reality is, I think in most people’s eyes, what we need is a meal that’s pretty easy to make and you
                     can
@@ -91,7 +87,7 @@
                     “She came onto the shoots with us and I had her in a sling and was feeding her on set – so I was
                     breastfeeding and food styling at the same time.”<br><br>
                     Mills loves the end result though, “because it really feels truly reflective of such an important
-                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" class="text-wrap" />
+                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" class="text-wrap"/>
                     With a baby, another on the way, and a business to run, <b>Mills has a new appreciation for how
                         simple
                         wellness should</b> – and can – be. “It’s going on a walk or doing a five-minute meditation,”
@@ -163,6 +159,12 @@
                         href="https://www.waterstones.com/book/deliciously-ella-quick-and-easy/ella-mills-woodward/9781473639249">Quick
                         and Easy - Deliciously Ella</a></i>
                 <hr><br>
+                <div>
+                    <i>
+                        <h5>Article from <a href="https://wiselivingmagazine.co.uk/food-and-drink/food-stories/deliciously-ella-interview/">Wise Living magazine</a></h5>
+                    </i>
+                </div>
+                <br>
             </div>
         </div>
 
