Index.html change
changed the image to aloe from sun

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <div class="flex-container">
   <div class="item">
-    <img src="./Main_Page/sun.jpg" alt="sun" class="rounded"/>
+    <img src="./Main_Page/aloe.jpg" alt="aloe" class="rounded"/>
     <div class="overlay">Explore The Dorset Countryside</div>
   </div>
   <div class="item">
