--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="flex-container">
   <div class="item">
     <img src="./Main_Page/aloe.jpg" alt="aloe" class="rounded"/>
-    <div class="overlay">Explore The Dorset Countryside</div>
+    <div class="overlay">Aloe - Helps you sleep</div>
   </div>
   <div class="item">
     <img src="./Main_Page/laos.jpg" alt="laos" class="rounded"/>
