--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <img src="./Main_Page/beach.jpg" alt="beach" class="rounded"/>
     </div>
   <div class="item">
-    <img src="./Main_Page/yoga2JPG.jpg" alt="yoga" class="rounded"/>
-    <div class="overlay">Yoga In The Desert</div> 
+    <img src="./Main_Page/aromatherapy.jpg" alt="herbs" class="rounded"/>
+    <div class="overlay">Aromatherapy</div> 
   </div>  
 </div>
 
