index.html change
aromotherapy image changed - resized one

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <img src="./Main_Page/beach.jpg" alt="beach" class="rounded"/>
     </div>
   <div class="item">
-    <img src="./Main_Page/aromatherapy.jpg" alt="herbs" class="rounded"/>
+    <img src="./Main_Page/rsz_aromatherapy.jpg" alt="herbs" class="rounded"/>
     <div class="overlay">Aromatherapy</div> 
   </div>  
 </div>
