index.html change
changed the sunset image for mindfulness

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="overlay">Aloe - Helps you sleep</div>
   </div>
   <div class="item">
-    <img src="./Main_Page/laos.jpg" alt="laos" class="rounded"/>
+    <img src="./Main_Page/mindfulness.jpg" alt="mindfulness" class="rounded"/>
   </div>
   <div class="item">
     <a href="./Healthy_Eating/xmas_recipes.html"> <img src="./Healthy_Eating/stuffed squash.jpg" alt="squash" class="rounded"/>
