adding star rating
adding star rating across healthy-eating.js and all.designs.css

--- a/Healthy_Eating/xmas_recipes.html
+++ b/Healthy_Eating/xmas_recipes.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="./healthy_eating.js"></script>
+    <script src="/path/to/index.js"></script>
 
 </head>
 
@@ -47,6 +48,9 @@
                 <h6>Monday 16th November 2020</h6><br>
                 <hr>
             </div>
+           
+        <div id="rater"></div>
+
             <div>
                 <img src="https://www.sainsburysmagazine.co.uk/uploads/media/675x882/06/11056-SM1120_Get-stuffed_Stuffed-squash.jpg?v=1-0"
                     class="text-wrap"></a>
