--- a/Healthy_Eating/xmas_recipes.html
+++ b/Healthy_Eating/xmas_recipes.html
@@ -48,8 +48,8 @@
                 <h6>Monday 16th November 2020</h6><br>
                 <hr>
             </div>
-           
-        <div id="rater"></div>
+
+            <div id="rater"></div>
 
             <div>
                 <img src="https://www.sainsburysmagazine.co.uk/uploads/media/675x882/06/11056-SM1120_Get-stuffed_Stuffed-squash.jpg?v=1-0"
@@ -104,42 +104,125 @@
                 </p>
                 <hr>
 
-            </div>
-
-
-        </div>
-
-
-        <br>
-        <div class="card-container recipe-container">
-            <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./soup image.jpg" class="card-img-top" alt="Autumnal soup">
-                <div class="card-body">
-                    <p class="card-text bg light" style="transform: rotate(0);">
-                        Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
-                                soup</b></a></p>
+                <div>
+                    <h3>Christmas recipe inspiration</h3>
+                    <hr>
                 </div>
-            </div>
-            <br>
-            <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./chocolate_mousse.jpg" class="card-img-top" alt="chocolate avocado mousse">
-                <div class="card-body">
-                    <p class="card-text bg light" style="transform: rotate(0);">
-                        Treat yourself without feeling guilty, tuck in to <a href="./GF_desserts.html"
-                            class="stretched-link"><b>guilt-free desserts</b></a></p>
+                <div>
+                    <i>
+                        <h2>Deliciously Ella's Christmas pudding with cashew custard</h2>
+                    </i>
                 </div>
-            </div>
-            <br>
-            <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./stuffed squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
-                <div class="card-body">
-                    <p class="card-text bg light" style="transform: rotate(0);">
-                        <a href="./xmas_recipes.html" class="stretched-link"><b>Christmas</b></a> recipe inspiration!
+                <div>
+                    <h6>Monday 16th November 2020</h6><br>
+                    <hr>
+                </div>
+
+                <div id="rater"></div>
+
+                <div>
+                    <img src="https://www.telegraph.co.uk/content/dam/food-and-drink/2015/12/15/ella_pudding_trans_NvBQzQNjv4Bqeo_i_u9APj8RuoebjoAHt0k9u7HhRJvuo-ZLenGRumA.jpg?imwidth=1400"
+                        class="text-wrap"></a>
+                    <p>
+                        Ingredients
+                    <ul class="ingredients" style="list-style-type:none;">
+                        For the custard
+
+                        <li>50g raw cashews</li>
+                        <li>1 tsp vanilla powder</li>
+                        <li>2 tbsp maple syrup</li>
+
+                        For the pudding
+
+                        <li>50g dried cranberries, halved</li>
+                        <li>50g dried apricots, quartered</li>
+                        <li>50g raisins</li>
+                        <li>50g sultanas</li>
+                        <li>75g medjool dates, pitted and chopped</li>
+                        <li>1 apple, cored and chopped into 1cm cubes</li>
+                        <li>1½ tbsp milled linseed, soaked in 3 tbsp water for 10 minutes</li>
+                        <li>50g buckwheat flour</li>
+                        <li>150g almond flour</li>
+                        <li>100g chopped mixed nuts</li>
+                        <li>zest and juice of 1 small orange</li>
+                        <li>3 tbsp date syrup</li>
+                        <li>2 tbsp maple syrup</li>
+                        <li>2 tbsp coconut sugar</li>
+                        <li>1 tsp ground ginger</li>
+                        <li>2 tsp ground cinnamon</li>
+                        <li>1 tsp ground nutmeg</li>
+                        <li>1 tsp vanilla powder</li>
+                    </ul>
                     </p>
+                    <p>
+                        Method
+                    <ol>
+                        <li>Soak the cashews in water for 2-3 hours.</li>
+                        <li>Meanwhile, mix together all the pudding ingredients in a bowl. Line a 2-litre glass pudding
+                            bowl with baking paper. Spoon in the pudding mix, then place a large circle of baking paper
+                            over the top and secure it to the bowl with a piece of string.</li>
+                        <li>Put the bowl on an upturned saucer inside a wide pan, and fill with boiling water so that it
+                            comes halfway up the bowl. Cover with a lid, then simmer for 2 hours. Check the water level
+                            every half hour and top up as necessary.</li>
+                        <li>Meanwhile, finish the custard. Drain then blend the cashews in a food processor with the
+                            vanilla, maple syrup and approx 70ml water.</li>
+                        <li>Gradually add another 70ml (or more, or less, to your desired thickness).</li>
+                        <li>Blend for around 5 minutes until completely smooth. </li>
+                        <li>Once the pudding is cooked, turn it out on to a plate and let it stand for about 10 minutes.
+                        </li>
+                        <li>Heat the custard in a pan, then drizzle over the pudding and serve. </li>
+                    </ol>
+                    </p>
+                    </p>
+                    <hr>
+                    <p>
+                        <i>This recipe can be found here: <a
+                                href="https://www.telegraph.co.uk/recipes/0/deliciously-ellas-christmas-pudding-with-cashew-custard/">Deliciously
+                                Ella's Christmas pudding with cashew custard</a></i>
+                    </p>
+                    <hr>
+
+
+
+
+                </div>
+
+
+            </div>
+
+
+            <br>
+            <div class="card-container recipe-container">
+                <div class="card mx-md-5" style="width: 12rem;">
+                    <img src="./soup image.jpg" class="card-img-top" alt="Autumnal soup">
+                    <div class="card-body">
+                        <p class="card-text bg light" style="transform: rotate(0);">
+                            Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious
+                                    autumnal
+                                    soup</b></a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="card mx-md-5" style="width: 12rem;">
+                    <img src="./chocolate_mousse.jpg" class="card-img-top" alt="chocolate avocado mousse">
+                    <div class="card-body">
+                        <p class="card-text bg light" style="transform: rotate(0);">
+                            Treat yourself without feeling guilty, tuck in to <a href="./GF_desserts.html"
+                                class="stretched-link"><b>guilt-free desserts</b></a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="card mx-md-5" style="width: 12rem;">
+                    <img src="./stuffed squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
+                    <div class="card-body">
+                        <p class="card-text bg light" style="transform: rotate(0);">
+                            <a href="./xmas_recipes.html" class="stretched-link"><b>Christmas</b></a> recipe
+                            inspiration!
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
@@ -147,19 +230,19 @@
 
 
 
-    <footer>
-        <div class="flex-container2">
-            <a href="https://instagram.com"><img src="../Main_Page/instagram.jpg.png" class="social_icon"
-                    alt="instagram" width="40" height="40"></a>
-            <a href="https://facebook.com"><img src="../Main_Page/facebook.jpg.png" class="social_icon" alt="facebook"
-                    width="40" height="40"></a>
-            <a href="https://twitter.com"><img src="../Main_Page/twitter.jpg.png" class="social_icon" alt="twitter"
-                    width="40" height="40"></a>
-            <a href="https://youtube.com"><img src="../Main_Page/youtube.jpg.png" class="social_icon" alt="youtube"
-                    width="40" height="40"></a>
-        </div>
-        <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
-    </footer>
+        <footer>
+            <div class="flex-container2">
+                <a href="https://instagram.com"><img src="../Main_Page/instagram.jpg.png" class="social_icon"
+                        alt="instagram" width="40" height="40"></a>
+                <a href="https://facebook.com"><img src="../Main_Page/facebook.jpg.png" class="social_icon"
+                        alt="facebook" width="40" height="40"></a>
+                <a href="https://twitter.com"><img src="../Main_Page/twitter.jpg.png" class="social_icon" alt="twitter"
+                        width="40" height="40"></a>
+                <a href="https://youtube.com"><img src="../Main_Page/youtube.jpg.png" class="social_icon" alt="youtube"
+                        width="40" height="40"></a>
+            </div>
+            <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
+        </footer>
 
 </body>
 
