--- a/Healthy_Eating/healthy_eating.html
+++ b/Healthy_Eating/healthy_eating.html
@@ -57,7 +57,7 @@
                 <hr>
             </div>
             <div>
-                <p> Often seen as a poster girl for wellness, Ella Mills – otherwise known as ‘Deliciously Ella’ –
+                    Often seen as a poster girl for wellness, Ella Mills – otherwise known as ‘Deliciously Ella’ –
                     actually
                     isn’t too keen on the term.<br><br>
                     “I do think the conversation has become quite charged, quite loaded,” she says thoughtfully. “Even
@@ -65,7 +65,7 @@
                     word <b>‘wellness’</b> sometimes makes people think of weird and wacky things in LA, with shamans
                     and
                     cleanses. When you hear it, you don’t necessarily think of going for a walk and then making a bean
-                    chilli, which feels more within your remit.<br><br><img src="https://www.harpersbazaararabia.com/public/images/2015/10/08/20140603_ella%2020432_PR_5145701.jpg" class="text-wrap"/>
+                    chilli, which feels more within your remit.<br><br><img src="https://www.harpersbazaararabia.com/public/images/2015/10/08/20140603_ella%2020432_PR_5145701.jpg" alt="ella mindfulness" class="text-wrap"/>
                     “The wonderful and wacky make more interesting stories, which I so appreciate,” she adds, “but the
                     reality is, I think in most people’s eyes, what we need is a meal that’s pretty easy to make and you
                     can
@@ -76,9 +76,8 @@
                     and
                     her husband and business partner, Matt, welcomed her first child, Skye, last year.
                     <hr>
-                </p>
-                </p>
-                <p>The book may be all about ease – but it was born out of blood, sweat and tears. Mills is honest about
+                
+                    The book may be all about ease – but it was born out of blood, sweat and tears. Mills is honest about
                     her
                     struggles writing it, saying frankly: “This cookbook has actually been on a personal and emotional
                     level, the hardest project I’ve ever done. I went back to work with it four weeks after Skye was
@@ -87,7 +86,7 @@
                     “She came onto the shoots with us and I had her in a sling and was feeding her on set – so I was
                     breastfeeding and food styling at the same time.”<br><br>
                     Mills loves the end result though, “because it really feels truly reflective of such an important
-                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" class="text-wrap"/>
+                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" alt="Ella and Skye" class="text-wrap"/>
                     With a baby, another on the way, and a business to run, <b>Mills has a new appreciation for how
                         simple
                         wellness should</b> – and can – be. “It’s going on a walk or doing a five-minute meditation,”
@@ -107,11 +106,10 @@
                     get
                     at their local corner shop, like tapioca flour and tahini.
                     <hr>
-                </p>
                 <p>
                     Food is obviously a big part of Mills’ ethos, but she’s started seeing it as just one part of a
                     bigger
-                    picture. <img src="../Healthy_Eating/ella-book.jpg" class="text-wrap" />Each chapter in the new book
+                    picture. <img src="../Healthy_Eating/ella-book.jpg" alt="Ella's book" class="text-wrap" />Each chapter in the new book
                     explores a different issue, whether it’s mental health or the
                     environment – wider interests which have been piqued by her podcast series interviewing various
                     experts.<br><br>
@@ -160,9 +158,8 @@
                         and Easy - Deliciously Ella</a></i>
                 <hr><br>
                 <div>
-                    <i>
-                        <h5>Article from <a href="https://wiselivingmagazine.co.uk/food-and-drink/food-stories/deliciously-ella-interview/">Wise Living magazine</a></h5>
-                    </i>
+                    
+                        <h5><i>Article from <a href="https://wiselivingmagazine.co.uk/food-and-drink/food-stories/deliciously-ella-interview/">Wise Living magazine</a></i></h5>
                 </div>
                 <br>
             </div>
@@ -172,7 +169,7 @@
         <br>
         <div class="card-container recipe-container">
             <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./soup image.jpg" class="card-img-top" alt="Autumnal soup">
+                <img src="./soup.jpg" class="card-img-top" alt="Autumnal soup">
                 <div class="card-body">
                     <p class="card-text bg light" style="transform: rotate(0);">
                         Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
@@ -190,7 +187,7 @@
             </div>
             <br>
             <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./stuffed squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
+                <img src="./stuffed-squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
                 <div class="card-body">
                     <p class="card-text bg light" style="transform: rotate(0);">
                         <a href="./xmas_recipes.html" class="stretched-link"><b>Christmas</b></a> recipe inspiration!
