--- a/Healthy_Eating/xmas_recipes.html
+++ b/Healthy_Eating/xmas_recipes.html
@@ -40,9 +40,7 @@
                 <hr>
             </div>
             <div>
-                <i>
-                    <h2>Stuffed Butternut Squash</h2>
-                </i>
+                <h2><i>Stuffed Butternut Squash</i></h2>
             </div>
             <div>
                 <h6>Monday 16th November 2020</h6><br>
@@ -53,9 +51,9 @@
 
             <div>
                 <img src="https://www.sainsburysmagazine.co.uk/uploads/media/675x882/06/11056-SM1120_Get-stuffed_Stuffed-squash.jpg?v=1-0"
-                    class="text-wrap"></a>
+                    alt="stuffed-squash" class="text-wrap">
                 <p>
-                    Ingredients
+                <h5>Ingredients</h5>
                 <ul class="ingredients" style="list-style-type:none;">
                     <li>1 large butternut squash, about 1.2kg</li>
                     <li>½ tbsp olive oil</li>
@@ -72,7 +70,7 @@
                 </ul>
                 </p>
                 <p>
-                    Method
+                <h5>Method</h5>
                 <ol>
                     <li>Preheat the oven to 200°C, fan 180°C, gas 6. Slice the butternut squash in half end-to-end and
                         scrape out the seeds. Place both halves onto a lined oven tray, cut-side down. Roast for 40-50
@@ -95,45 +93,36 @@
                         help hold each slice together, and discard the string.</li>
                 </ol>
                 </p>
-                </p>
+
                 <hr>
                 <p>
                     <i>This recipe can be found here: <a
                             href="https://www.sainsburysmagazine.co.uk/recipes/mains/jewelled-stuffed-butternut-squash">Stuffed
                             Butternut Squash</a></i>
                 </p>
-                <hr>
+                <hr><br><br>
+            </div>
 
+            <div class="container recipe-text">
                 <div>
-                    <h3>Christmas recipe inspiration</h3>
-                    <hr>
-                </div>
-                <div>
-                    <i>
-                        <h2>Deliciously Ella's Christmas pudding with cashew custard</h2>
-                    </i>
+                    <h2><i>Deliciously Ella's Christmas pudding with cashew custard</i></h2>
                 </div>
                 <div>
                     <h6>Monday 16th November 2020</h6><br>
                     <hr>
                 </div>
-
-                <div id="rater"></div>
-
                 <div>
-                    <img src="https://www.telegraph.co.uk/content/dam/food-and-drink/2015/12/15/ella_pudding_trans_NvBQzQNjv4Bqeo_i_u9APj8RuoebjoAHt0k9u7HhRJvuo-ZLenGRumA.jpg?imwidth=1400"
-                        class="text-wrap"></a>
+                    <img src="./xmas-pudding.jpg" alt="christmas pudding" class="text-wrap">
                     <p>
-                        Ingredients
+            <h5>Ingredients</h5>          
+                <i>For the custard</i>
                     <ul class="ingredients" style="list-style-type:none;">
-                        For the custard
-
                         <li>50g raw cashews</li>
                         <li>1 tsp vanilla powder</li>
                         <li>2 tbsp maple syrup</li>
-
-                        For the pudding
-
+                    </ul>
+                <i>For the pudding</i>
+                    <ul class="ingredients" style="list-style-type:none;">
                         <li>50g dried cranberries, halved</li>
                         <li>50g dried apricots, quartered</li>
                         <li>50g raisins</li>
@@ -155,7 +144,7 @@
                     </ul>
                     </p>
                     <p>
-                        Method
+            <h5>Method</h5>
                     <ol>
                         <li>Soak the cashews in water for 2-3 hours.</li>
                         <li>Meanwhile, mix together all the pudding ingredients in a bowl. Line a 2-litre glass pudding
@@ -172,9 +161,7 @@
                         </li>
                         <li>Heat the custard in a pan, then drizzle over the pudding and serve. </li>
                     </ol>
-                    </p>
-                    </p>
-                    <hr>
+                    <hr><br><br>
                     <p>
                         <i>This recipe can be found here: <a
                                 href="https://www.telegraph.co.uk/recipes/0/deliciously-ellas-christmas-pudding-with-cashew-custard/">Deliciously
@@ -183,18 +170,16 @@
                     <hr>
 
 
-
-
                 </div>
 
-
+                </div>
             </div>
 
-
+            <br>
             <br>
             <div class="card-container recipe-container">
                 <div class="card mx-md-5" style="width: 12rem;">
-                    <img src="./soup image.jpg" class="card-img-top" alt="Autumnal soup">
+                    <img src="./soup-image.jpg" class="card-img-top" alt="Autumnal soup">
                     <div class="card-body">
                         <p class="card-text bg light" style="transform: rotate(0);">
                             Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious
@@ -213,7 +198,7 @@
                 </div>
                 <br>
                 <div class="card mx-md-5" style="width: 12rem;">
-                    <img src="./stuffed squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
+                    <img src="./stuffed-squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
                     <div class="card-body">
                         <p class="card-text bg light" style="transform: rotate(0);">
                             <a href="./xmas_recipes.html" class="stretched-link"><b>Christmas</b></a> recipe
@@ -222,27 +207,32 @@
                     </div>
                 </div>
             </div>
+
+        
+    </div>
+
+
+
+
+
+
+    <footer>
+        <div class="flex-container2">
+            <a href="https://instagram.com"><img src="../Main_Page/instagram.jpg.png" class="social_icon"
+                    alt="instagram" width="40" height="40"></a>
+            <a href="https://facebook.com"><img src="../Main_Page/facebook.jpg.png" class="social_icon" alt="facebook"
+                    width="40" height="40"></a>
+            <a href="https://twitter.com"><img src="../Main_Page/twitter.jpg.png" class="social_icon" alt="twitter"
+                    width="40" height="40"></a>
+            <a href="https://youtube.com"><img src="../Main_Page/youtube.jpg.png" class="social_icon" alt="youtube"
+                    width="40" height="40"></a>
         </div>
 
 
 
+        <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
+    </footer>
 
-
-
-
-        <footer>
-            <div class="flex-container2">
-                <a href="https://instagram.com"><img src="../Main_Page/instagram.jpg.png" class="social_icon"
-                        alt="instagram" width="40" height="40"></a>
-                <a href="https://facebook.com"><img src="../Main_Page/facebook.jpg.png" class="social_icon"
-                        alt="facebook" width="40" height="40"></a>
-                <a href="https://twitter.com"><img src="../Main_Page/twitter.jpg.png" class="social_icon" alt="twitter"
-                        width="40" height="40"></a>
-                <a href="https://youtube.com"><img src="../Main_Page/youtube.jpg.png" class="social_icon" alt="youtube"
-                        width="40" height="40"></a>
-            </div>
-            <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
-        </footer>
 
 </body>
 
