--- a/Healthy_Eating/Autumnal_soups.html
+++ b/Healthy_Eating/Autumnal_soups.html
@@ -30,6 +30,7 @@
     </div>
   </header>
 
+
   <div class="H-eating-page">
     <div class="container recipe-text">
       <div>
@@ -82,44 +83,90 @@
               href="https://www.bbcgoodfood.com/recipes/sweet-potato-rosemary-soup-garlic-toasts">Sweet Potato &
               Rosemary Soup</a></i>
         </p>
-        <hr>
-
+        <hr><br><br>
       </div>
 
 
-    </div>
+      <div class="container recipe-text">
+        <div>
+            <h2><i>Lentil and Cardamon Soup</i></h2>
+        </div>
+        <div>
+          <h6>Monday 16th November 2020</h6><br>
+          <hr>
+        </div>
+        <div>
+          <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/lentil-cardamom-soup-d6a1859.jpg?quality=90&webp=true&resize=440,400" alt="Lentil Soup" class="text-wrap">
+          <p>
+            Cheap and cheerful red lentils are jazzed up with coconut milk and plenty of spices in this quick and warming soup recipe<br>
+          <h5>Ingredients</h5>
+          <ul class="ingredients" style="list-style-type:none;">
+            <li>3 cups almonds</li>
+            <li>1 large onion , finely chopped</li>
+            <li>2 fat garlic cloves , crushed</li>
+            <li>1 large carrot , finely chopped</li>
+            <li>thumb-sized piece of ginger , peeled and finely chopped</li>
+            <li>2 tbsp oil , sunflower, rapeseed or groundnut all work well</li>
+            <li>½ tsp turmeric</li>
+            <li>seeds from 10 cardamom pods</li>
+            <li>1 tsp cumin , seeds or ground</li>
+            <li>100g red lentils</li>
+            <li>400ml can light coconut milk</li>
+            <li>zest and juice 1 lemon</li>
+            <li>pinch of chilli flakes</li>
+            <li>handful of parsley or coriander, chopped</li>        
+          </ul>
+          </p>
+          <p>
+          <h5>Method</h5>
+          <ol>
+            <li>Put the onion, garlic, carrot and ginger into a saucepan, drizzle over the oil, and cook for a few mins to soften. Add the turmeric, cardamom and cumin. Stir well to combine, and cook gently for a few mins more, until the spices are aromatic.</li>
+            <li>Add the lentils to the pan. Pour over the coconut milk, fill the can with water and add this too. Bring to the boil, then reduce to a simmer for 15 mins until the lentils are soft and swollen but retain a little bite. Using a hand blender, pulse the soup until some is blended completely, leaving some larger vegetable chunks.</li>
+            <li>Zest the lemon straight into the pan, then squeeze the juice over the soup and stir through with a pinch of salt, chilli and finely chopped herbs. Ladle into bowls and sprinkle over a little more lemon zest, if you like.</li>
+          </ol>
+         <br>
+          <p>
+            <i>This recipe can be found here: <a
+                href="https://www.bbcgoodfood.com/recipes/jacks-lentil-cardamom-soup">Lentil and Cardamon Soup</a></i>
+          </p>
+          <hr>
+
+        </div>
+
+      </div>
+      </div>
 
 
     <br>
     <div class="card-container recipe-container">
       <div class="card mx-md-5" style="width: 12rem;">
-        <img src="./soup image.jpg" class="card-img-top" alt="Autumnal soup">
-        <div class="card-body">
-          <p class="card-text bg light" style="transform: rotate(0);">
-            Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
-                soup</b></a></p>
-        </div>
+          <img src="./soup-image.jpg" class="card-img-top" alt="Autumnal soup">
+          <div class="card-body">
+              <p class="card-text bg light" style="transform: rotate(0);">
+                  Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
+                          soup</b></a></p>
+          </div>
       </div>
       <br>
       <div class="card mx-md-5" style="width: 12rem;">
-        <img src="./chocolate_mousse.jpg" class="card-img-top" alt="chocolate avocado mousse">
-        <div class="card-body">
-          <p class="card-text bg light" style="transform: rotate(0);">
-            Treat yourself without feeling guilty, tuck in to <a href="./GF_desserts.html"
-              class="stretched-link"><b>guilt-free desserts</b></a></p>
-        </div>
+          <img src="./chocolate_mousse.jpg" class="card-img-top" alt="chocolate avocado mousse">
+          <div class="card-body">
+              <p class="card-text bg light" style="transform: rotate(0);">
+                  Treat yourself without feeling guilty, tuck in to <a href="./GF_desserts.html"
+                      class="stretched-link"><b>guilt-free desserts</b></a></p>
+          </div>
       </div>
       <br>
       <div class="card mx-md-5" style="width: 12rem;">
-        <img src="./stuffed squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
-        <div class="card-body">
-          <p class="card-text bg light" style="transform: rotate(0);">
-            <a href="./xmas_recipes.html" class="stretched-link"><b>Christmas</b></a> recipe inspiration!
-          </p>
-        </div>
+          <img src="./stuffed-squash.jpg" class="card-img-top" alt="stuffed jewelled squash">
+          <div class="card-body">
+              <p class="card-text bg light" style="transform: rotate(0);">
+                  <a href="./xmas_recipes.html" class="stretched-link"><b>Christmas</b></a> recipe inspiration!
+              </p>
+          </div>
       </div>
-    </div>
   </div>
+</div>
 <br>
 
   <footer>
@@ -133,6 +180,10 @@
       <a href="https://youtube.com"><img src="../Main_Page/youtube.jpg.png" class="social_icon" alt="youtube" width="40"
           height="40"></a>
     </div>
+
+
+
+    
     <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
   </footer>
 
