--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <div class="search-container">
-  <form action=""> <!-- here i will add the url link to the site-->
+  <form action="https://em1lyjayner0se.github.io/Serenity-CFG-Project/index.html"> <!-- here i will add the url link to the site-->
         <input type="text" class="search-button" name="search">
         <input type="submit" class="submit-button" value="Search">
   </form>
