--- a/Healthy_Eating/GF_desserts.html
+++ b/Healthy_Eating/GF_desserts.html
@@ -157,7 +157,7 @@
         <br>
         <div class="card-container recipe-container">
           <div class="card mx-md-5" style="width: 12rem;">
-            <img src="./soup-image.jpg" class="card-img-top" alt="Autumnal soup">
+            <img src="./soup.jpg" class="card-img-top" alt="Autumnal soup">
             <div class="card-body">
               <p class="card-text bg light" style="transform: rotate(0);">
                 Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
