--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
 
 <div class="search-container">
-  <form action="https://em1lyjayner0se.github.io/Serenity-CFG-Project/index.html"> <!-- here i will add the url link to the site-->
-        <input type="text" class="search-button" name="search">
-        <input type="submit" class="submit-button" value="Search">
-  </form>
+  <form id="frmSearch" class="search2" method="get" action="index.html"> <!-- here i will add the url link to the site-->
+        <input class="search" id="textSearch" type="text" class="search-button" name="search"/>
+        <input class="submit" type="submit" class="submit-button" value="Search"/>
+        <input class="search" type="hidden" name="sitesearch" value="index.html"/>
+      </form>
 </div>
   
 <div class="flex-container">
