change to index.html
changed search form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bellota&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src ="./main_page.js"></script>
+    <script src ="./all.js"></script>
+
 
 </head>
 <body>
@@ -27,9 +28,9 @@
 
 
 <div class="search-container">
-  <form id="frmSearch" class="search2" method="get" action="index.html"> <!-- here i will add the url link to the site-->
-        <input class="search" id="textSearch" type="text" class="search-button" name="search"/>
-        <input class="submit" type="submit" class="submit-button" value="Search"/>
+  <form id="frmSearch" class="search2" method="get" action="https://em1lyjayner0se.github.io/Serenity-CFG-Project/index.html"> <!-- here i will add the url link to the site-->
+        <input class="search-button" id="txtSearch" type="text" name="search"/>
+        <input class="submit-button" type="submit" value="Search"/>
         <input class="search" type="hidden" name="sitesearch" value="index.html"/>
       </form>
 </div>
