Update Autumnal soup
change few html errors

--- a/Healthy_Eating/Autumnal_soups.html
+++ b/Healthy_Eating/Autumnal_soups.html
@@ -38,9 +38,7 @@
         <hr>
       </div>
       <div>
-        <i>
-          <h2>Sweet potato & rosemary soup<br>with garlic toasts</h2>
-        </i>
+          <h2><i>Sweet potato & rosemary soup<br>with garlic toasts</i></h2>
       </div>
       <div>
         <h6>Monday 16th November 2020</h6><br>
@@ -49,8 +47,7 @@
       <div>
         <img
           src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-279556_11-d852fd4.jpg?quality=90&webp=true&resize=440,400"
-          class="text-wrap"></a>
-        <p>
+          alt="soup" class="text-wrap">
         <h5>Ingredients</h5>
         <ul class="ingredients" style="list-style-type:none;">
           <li>2 tsp olive oil , plus extra for brushing</li>
@@ -61,7 +58,6 @@
           <li>2 rosemary sprigs</li>
           <li>8 slices bread (ciabatta is good)</li>
         </ul>
-        </p>
         <p>
         <h5>Method</h5>
         <ol>
@@ -75,8 +71,6 @@
           <li>Use a hand blender to roughly purée the soup, adding a splash of hot water if it seems too thick. Season
             well, then pour into warmed bowls and serve with the toasts.</li>
         </ol>
-        </p>
-        </p>
         <hr>
         <p>
           <i>This recipe can be found here: <a
@@ -97,7 +91,6 @@
         </div>
         <div>
           <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/lentil-cardamom-soup-d6a1859.jpg?quality=90&webp=true&resize=440,400" alt="Lentil Soup" class="text-wrap">
-          <p>
             Cheap and cheerful red lentils are jazzed up with coconut milk and plenty of spices in this quick and warming soup recipe<br>
           <h5>Ingredients</h5>
           <ul class="ingredients" style="list-style-type:none;">
@@ -116,7 +109,6 @@
             <li>pinch of chilli flakes</li>
             <li>handful of parsley or coriander, chopped</li>        
           </ul>
-          </p>
           <p>
           <h5>Method</h5>
           <ol>
