--- a/Healthy_Eating/healthy_eating.html
+++ b/Healthy_Eating/healthy_eating.html
@@ -59,13 +59,13 @@
             <div>
                     Often seen as a poster girl for wellness, Ella Mills – otherwise known as ‘Deliciously Ella’ –
                     actually
-                    isn’t too keen on the term.<br><br>
+                    isn’t too keen on the term.<br><br><img src="https://www.harpersbazaararabia.com/public/images/2015/10/08/20140603_ella%2020432_PR_5145701.jpg" alt="ella mindfulness" class="text-wrap" style="max-width:100%;height:auto;"/>
                     “I do think the conversation has become quite charged, quite loaded,” she says thoughtfully. “Even
                     the
                     word <b>‘wellness’</b> sometimes makes people think of weird and wacky things in LA, with shamans
                     and
                     cleanses. When you hear it, you don’t necessarily think of going for a walk and then making a bean
-                    chilli, which feels more within your remit.<br><br><img src="https://www.harpersbazaararabia.com/public/images/2015/10/08/20140603_ella%2020432_PR_5145701.jpg" alt="ella mindfulness" class="text-wrap"/>
+                    chilli, which feels more within your remit.<br><br>
                     “The wonderful and wacky make more interesting stories, which I so appreciate,” she adds, “but the
                     reality is, I think in most people’s eyes, what we need is a meal that’s pretty easy to make and you
                     can
@@ -86,7 +86,7 @@
                     “She came onto the shoots with us and I had her in a sling and was feeding her on set – so I was
                     breastfeeding and food styling at the same time.”<br><br>
                     Mills loves the end result though, “because it really feels truly reflective of such an important
-                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" alt="Ella and Skye" class="text-wrap"/>
+                    time”.<br><br><img src="../Healthy_Eating/ella_skye.jpg" alt="Ella and Skye" class="text-wrap" style="max-width:100%;height:auto;"/>
                     With a baby, another on the way, and a business to run, <b>Mills has a new appreciation for how
                         simple
                         wellness should</b> – and can – be. “It’s going on a walk or doing a five-minute meditation,”
@@ -109,7 +109,7 @@
                 <p>
                     Food is obviously a big part of Mills’ ethos, but she’s started seeing it as just one part of a
                     bigger
-                    picture. <img src="../Healthy_Eating/ella-book.jpg" alt="Ella's book" class="text-wrap" />Each chapter in the new book
+                    picture. <img src="../Healthy_Eating/ella-book.jpg" alt="Ella's book" class="text-wrap" style="max-width:100%;height:auto;"/>Each chapter in the new book
                     explores a different issue, whether it’s mental health or the
                     environment – wider interests which have been piqued by her podcast series interviewing various
                     experts.<br><br>
@@ -169,7 +169,7 @@
         <br>
         <div class="card-container recipe-container">
             <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./soup.jpg" class="card-img-top" alt="Autumnal soup">
+                <img src="./soup.jpg" class="card-img-top" alt="Autumnal soup" style="max-width:100%;height:auto;">
                 <div class="card-body">
                     <p class="card-text bg light" style="transform: rotate(0);">
                         Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
