--- a/Healthy_Eating/xmas_recipes.html
+++ b/Healthy_Eating/xmas_recipes.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bellota&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="./healthy_eating.js"></script>
-    <script src="/path/to/index.js"></script>
+    <script src="./healthy-eating.js"></script>
+
 
 </head>
 
@@ -51,7 +51,7 @@
 
             <div>
                 <img src="https://www.sainsburysmagazine.co.uk/uploads/media/675x882/06/11056-SM1120_Get-stuffed_Stuffed-squash.jpg?v=1-0"
-                    alt="stuffed-squash" class="text-wrap">
+                    alt="stuffed-squash" class="text-wrap" style="max-width:100%;height:auto;">
                 <h5>Ingredients</h5>
                 <ul class="ingredients" style="list-style-type:none;">
                     <li>1 large butternut squash, about 1.2kg</li>
@@ -109,7 +109,7 @@
                     <hr>
                 </div>
                 <div>
-                    <img src="./xmas-pudding.jpg" alt="christmas pudding" class="text-wrap">
+                    <img src="./xmas-pudding.jpg" alt="christmas pudding" class="text-wrap" style="max-width:100%;height:auto;">
                 
             <h5>Ingredients</h5>          
                 <i>For the custard</i>
