--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
   
 <div class="flex-container">
   <div class="item">
-    <a href="./Healthy_Eating/GF_desserts.html"> <img src="./Healthy_Eating/chocolate_mousse.jpg" alt="choc mousse" class="rounded"/>
+    <a href="./Healthy_Eating/GF_desserts.html"> <img src="./Healthy_Eating/chocolate_mousse.jpg" alt="choc mousse" class="rounded" style="max-width:100%;height:auto;"/>
     <div class="overlay">Guilt-Free Avocado Chocolate Mousse</div></a>  
   </div>
   <div class="item">
-    <img src="./Main_Page/beach.jpg" alt="beach" class="rounded"/>
+    <img src="./Main_Page/beach.jpg" alt="beach" class="rounded" style="max-width:100%;height:auto;"/>
     </div>
   <div class="item">
-    <img src="./Main_Page/rsz_aromatherapy.jpg" alt="herbs" class="rounded"/>
+    <img src="./Main_Page/rsz_aromatherapy.jpg" alt="herbs" class="rounded" style="max-width:100%;height:auto;"/>
     <div class="overlay">Aromatherapy</div> 
   </div>  
 </div>
 
 <div class="flex-container">
 <div class="video-round">
-  <video width="700" height="320" controls autoplay loop>
-  <source src="./Main_Page/sunset.mp4" type="video/mp4">
+  <video width="700" height="320" autoplay loop>
+  <source src="./Main_Page/sunset.mp4" class="rounded" type="video/mp4" style="max-width:100%;height:auto;">
   Your browser does not support the video tag.
   </video>
 </div>  
@@ -60,14 +60,14 @@
 
 <div class="flex-container">
   <div class="item">
-    <img src="./Main_Page/aloe.jpg" alt="aloe" class="rounded"/>
+    <img src="./Main_Page/aloe.jpg" alt="aloe" class="rounded" style="max-width:100%;height:auto;">
     <div class="overlay">Aloe - Helps you sleep</div>
   </div>
   <div class="item">
-    <img src="./Main_Page/mindfulness.jpg" alt="mindfulness" class="rounded"/>
+    <img src="./Main_Page/mindfulness.jpg" alt="mindfulness" class="rounded" style="max-width:100%;height:auto;">
   </div>
   <div class="item">
-    <a href="./Healthy_Eating/xmas_recipes.html"> <img src="./Healthy_Eating/stuffed-squash.jpg" alt="squash" class="rounded"/>
+    <a href="./Healthy_Eating/xmas_recipes.html"> <img src="./Healthy_Eating/stuffed-squash.jpg" alt="squash" class="rounded" style="max-width:100%;height:auto;">
     <div class="overlay">Festive Butternut Squash</div></a>
   </div>
 </div>
